--- a/README.org
+++ b/README.org
@@ -65,20 +65,20 @@ in any Linux environment.
 
 ** how to install
 *** in an Arch Linux environment
-#+BEGIN_EXAMPLE shell
+#+BEGIN_SRC sh
 sudo pacman -S make autoconf git cargo
 git clone https://gitlab.com/dmhz/emacs.cfg.git <.emacs.d or something else>
-#+END_EXAMPLE
+#+END_SRC
 
 *** in a Windows environment 
-The first step is install msys2 https://msys2.github.io/
+The first step is install [[https://msys2.github.io/][msys2]]
 Install rust and add the path to cargo to PATH variable in msys2 console something like:
-#+BEGIN_EXAMPLE shell 
+#+BEGIN_SRC sh
 PATH=$PATH:'C:\rust\' 
-#+END_EXAMPLE
+#+END_SRC
 Install terminus-ttf
 
 In msys2 console:
-#+BEGIN_EXAMPLE shell
+#+BEGIN_SRC sh
 pacman -S mingw-w32-x86_64-emacs make autoconf git
-#+END_EXAMPLE
+#+END_SRC
