--- a/README.org
+++ b/README.org
@@ -71,14 +71,13 @@ git clone https://gitlab.com/dmhz/emacs.cfg.git <.emacs.d or something else>
 #+END_SRC
 
 *** in a Windows environment 
-The first step is install [[https://msys2.github.io/][msys2]]
-Install rust and add the path to cargo to PATH variable in msys2 console something like:
+- The first step is install [[https://msys2.github.io/][msys2]]
+- Install rust and add the path to cargo to PATH variable in msys2 console something like:
 #+BEGIN_SRC sh
 PATH=$PATH:'C:\rust\' 
 #+END_SRC
-Install terminus-ttf
-
-In msys2 console:
+- Install [[http://terminus-font.sourceforge.net/][terminus-ttf]]
+- In msys2 console:
 #+BEGIN_SRC sh
 pacman -S mingw-w32-x86_64-emacs make autoconf git
 #+END_SRC
