--- a/README.org
+++ b/README.org
@@ -26,7 +26,6 @@ My set of small configs for Emacs.
 |    |--- haskell-cfg.el
 |    |--- interface-cfg.el
 |    |--- keybindings-cfg.el
-|    |--- lisp-cfg.el
 |    |--- org-cfg.el
 |    |--- parens-cfg.el
 |    |--- racket-cfg.el
@@ -39,7 +38,7 @@ My set of small configs for Emacs.
 |--- init.el
 |--- README.org
 
-2 directories, 31 file
+2 directories, 30 files
 #+END_EXAMPLE
 
 ** supported version
