--- a/README.org
+++ b/README.org
@@ -54,23 +54,27 @@ in any Linux environment.
 - [[https://www.gnu.org/software/emacs/refcards/pdf/calccard.pdf][GNU Calc Reference Card (for version 25)]]
 - [[https://www.gnu.org/software/emacs/refcards/pdf/dired-ref.pdf][Dired Reference Card (based on Dired in GNU Emacs 25)]]
 ** dependencies
-    
-| package       | optional?    | for what                                                     |
-|---------------+--------------+--------------------------------------------------------------|
-| make          | no           | for build some base packages taken by el-get                 |
-| autoconf      | no           | see above                                                    |
-| git           | no           | el-get                                                       |
-| cargo         | no           | rust                                                         |
-| opam          | yes          | caml                                                         |
-| dcd           | yes          | The D Completion Daemon for the D programming language       |
-| merlin        | yes          | code completion tool for OCaml                               |
-| leiningen     | yes          | cider depends on                                             |
-| sbcl          | yes          | slime                                                        |
-| ccl           | yes          | slime                                                        |
-| racket        | yes          | racket, of course                                            |
-| terminus-font | no (linux)   | it's the default font for me in Emacs in Linux               |
-| terminus-ttf  | no (windows) | see above, but in this case actual for a windows environment |
-| hunspell      | yes          | basic spell checking                                         |
+
+Note: optional? means «for the first startup with the just downloaded ~/.emacs.d».
+
+| package                     | optional?    | for what                                                     |
+|-----------------------------+--------------+--------------------------------------------------------------|
+| make                        | no           | for build some base packages taken by el-get                 |
+| autoconf (or dh-autoreconf) | no           | see above                                                    |
+| git                         | no           | el-get                                                       |
+| texinfo                     | no           | makeinfo                                                     |
+| python                      | no           | cask                                                         |
+| cargo                       | yes          | rust                                                         |
+| opam                        | yes          | caml                                                         |
+| dcd                         | yes          | The D Completion Daemon for the D programming language       |
+| merlin                      | yes          | code completion tool for OCaml                               |
+| leiningen                   | yes          | cider depends on                                             |
+| sbcl                        | yes          | slime                                                        |
+| ccl                         | yes          | slime                                                        |
+| racket                      | yes          | racket, of course                                            |
+| terminus-font               | no (linux)   | it's the default font for me in Emacs in Linux               |
+| terminus-ttf                | no (windows) | see above, but in this case actual for a windows environment |
+| hunspell                    | yes          | basic spell checking                                         |
 
 ** how to install
 *** in an Arch Linux environment
