--- a/README.org
+++ b/README.org
@@ -37,10 +37,11 @@ My set of small configs for Emacs.
 |    |--- alias
 |--- delete-compiled-el.sh
 |--- exclusions-example.el
+|--- exec-path-example.txt
 |--- init.el
 |--- README.org
 
-2 directories, 32 files
+2 directories, 33 files
 #+END_EXAMPLE
 
 ** supported version
