--- a/README.org
+++ b/README.org
@@ -55,6 +55,7 @@ in any Linux environment.
 *** the reference cards
 - [[https://www.gnu.org/software/emacs/refcards/pdf/refcard.pdf][GNU Emacs Reference Card (for version 25)]]
 - [[https://www.gnu.org/software/emacs/refcards/pdf/orgcard.pdf][Org-Mode Reference Card (for version 8.2)]]
+- [[https://www.gnu.org/software/auctex/manual/auctex.pdf][AUCTeX manual]]
 - [[https://www.gnu.org/software/emacs/refcards/pdf/calccard.pdf][GNU Calc Reference Card (for version 25)]]
 - [[https://www.gnu.org/software/emacs/refcards/pdf/dired-ref.pdf][Dired Reference Card (based on Dired in GNU Emacs 25)]] 
 *** global keybindings
