--- a/README.org
+++ b/README.org
@@ -101,7 +101,7 @@ in any Linux environment.
 
 Note: optional? means «for the first startup with the just downloaded ~/.emacs.d».
 
-| package                     | optional?    | for what                                                     |
+| package (archlinux)         | optional?    | for what                                                     |
 |-----------------------------+--------------+--------------------------------------------------------------|
 | make                        | no           | for build some base packages taken by el-get                 |
 | autoconf (or dh-autoreconf) | no           | see above                                                    |
@@ -117,7 +117,8 @@ Note: optional? means «for the first startup with the just downloaded ~/.emacs.
 | ccl                         | yes          | slime                                                        |
 | racket                      | yes          | racket, of course                                            |
 | terminus-font               | no (linux)   | it's the default font for me in Emacs in Linux               |
-| terminus-ttf                | no (windows) | see above, but in this case actual for a windows environment |
+| terminus-font-ttf (aur)     | no (windows) | see above, but in this case actual for a windows environment |
+| ttf-inconsolata             | yes          | an avalailable font                                          |
 | hunspell                    | yes          | basic spell checking                                         |
 
 ** how to install
